[package]
name = "cargo-cleanall"
description = "Cleans all project builds"
version = "1.1.0"
authors = ["DarkCeptor44"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
homepage = "https://github.com/DarkCeptor44/cargo-cleanall"
repository = "https://github.com/DarkCeptor44/cargo-cleanall"
keywords = ["cargo", "clean", "project", "builds", "terminal"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
rayon = "1.11.0"

[dev-dependencies]
divan = "0.1.21"
tempfile = "3.26.0"

[[bench]]
name = "bench"
harness = false
