[package]
name = "cargo-cleanall"
description = "Cleans all project builds"
version = "2.0.0"
authors = ["DarkCeptor44"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
homepage = "https://github.com/DarkCeptor44/cargo-cleanall"
repository = "https://github.com/DarkCeptor44/cargo-cleanall"
keywords = ["cargo", "clean", "project", "builds", "terminal"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
]

[dependencies]
# general
anyhow = "1.0.102"

# lib
tokio = { version = "1.49.0", features = ["fs", "process", "rt-multi-thread"] }

# cli
clap = { version = "4.5.60", features = ["derive"], optional = true }
colored = { version = "3.1.1", optional = true }
num_cpus = { version = "1.17.0", optional = true }
indicatif = { version = "0.18.4", optional = true }

[dev-dependencies]
divan = "0.1.21"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["macros"] }

[features]
default = []
cli = [
    "dep:clap",
    "dep:colored",
    "dep:num_cpus",
    "dep:indicatif",
    "tokio/macros",
    "tokio/sync",
]

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "cargo-cleanall"
required-features = ["cli"]
path = "src/main.rs"

[package.metadata.tokioreplacer]
keep_tokio = true
